--- a/app/src/main/res/layout/activity_myinfo.xml
+++ b/app/src/main/res/layout/activity_myinfo.xml
@@ -19,7 +19,8 @@
         tools:layout_constraintTop_creator="1"
         tools:layout_constraintRight_creator="1"
         tools:layout_constraintBottom_creator="1"
-        tools:layout_constraintLeft_creator="1" />
+        tools:layout_constraintLeft_creator="1"
+        app:layout_constraintVertical_bias="1.0" />
 
     <TextView
         android:id="@+id/textView2"
@@ -59,11 +60,12 @@
         android:text="@string/Cancel"
         android:textColor="@android:color/background_light"
         android:textStyle="bold"
-        app:layout_constraintBaseline_toBaselineOf="@+id/textView3"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="@+id/textView17"
         tools:layout_constraintLeft_creator="1"
-        tools:layout_constraintRight_creator="1" />
+        tools:layout_constraintRight_creator="1"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintBaseline_toBaselineOf="@+id/textView3" />
 
     <Button
         android:id="@+id/button_change_myinfo"
@@ -71,10 +73,12 @@
         android:layout_width="0dp"
         android:layout_height="48dp"
         android:background="?attr/colorPrimary"
+        android:onClick="changingMyInfo"
         android:text="@string/Change"
         android:textColor="@android:color/background_light"
         android:textStyle="bold"
         app:layout_constraintBaseline_toBaselineOf="@+id/textView3"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toRightOf="@+id/textView9"
         app:layout_constraintRight_toRightOf="@+id/toolbar_myinfo"
         tools:layout_constraintLeft_creator="1"
