--- a/app/src/main/res/layout/activity_nammukfood.xml
+++ b/app/src/main/res/layout/activity_nammukfood.xml
@@ -25,51 +25,51 @@
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="0dp"
         android:layout_height="48dp"
-        android:layout_marginLeft="8dp"
+        android:layout_marginLeft="0dp"
         android:background="#ff6161"
         android:text="@string/Cancel"
         android:textColor="@android:color/background_light"
         android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="@+id/toolbar_nammukfood"
         tools:layout_constraintLeft_creator="1"
-        tools:layout_constraintRight_creator="1"
-        app:layout_constraintBaseline_toBaselineOf="@+id/textView3" />
+        app:layout_constraintBaseline_toBaselineOf="@+id/textView3"
+        android:layout_marginStart="8dp" />
 
     <TextView
         android:id="@+id/textView3"
         android:layout_width="143dp"
         android:layout_height="0dp"
-        android:layout_marginEnd="120dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="112dp"
         android:layout_marginLeft="121dp"
+        android:layout_marginRight="112dp"
         android:layout_marginStart="121dp"
+        android:layout_marginTop="8dp"
         android:gravity="center_vertical|center"
-        android:text="남먹 음식"
+        android:text="@string/NammukFood"
         android:textColor="@android:color/white"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/toolbar_nammukfood"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="@+id/button_cancel_nammukfood"
+        app:layout_constraintRight_toRightOf="@+id/toolbar_nammukfood"
         app:layout_constraintTop_toTopOf="@+id/toolbar_nammukfood"
+        app:layout_constraintVertical_bias="1.0"
         tools:layout_constraintBottom_creator="1"
         tools:layout_constraintLeft_creator="1"
         tools:layout_constraintRight_creator="1"
-        tools:layout_constraintTop_creator="1"
-        app:layout_constraintVertical_bias="1.0"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="@+id/toolbar_nammukfood"
-        android:layout_marginTop="8dp"
-        app:layout_constraintHorizontal_bias="0.0"
-        android:layout_marginBottom="8dp" />
+        tools:layout_constraintTop_creator="1" />
 
     <ImageView
         android:id="@+id/imageView5"
-        android:layout_width="350dp"
-        android:layout_height="287dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="19dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginEnd="17dp"
+        android:layout_marginLeft="17dp"
+        android:layout_marginRight="17dp"
+        android:layout_marginStart="17dp"
+        android:layout_marginTop="27dp"
         android:background="?attr/colorPrimary"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -77,35 +77,35 @@
         app:srcCompat="?attr/colorPrimary"
         tools:layout_constraintLeft_creator="1"
         tools:layout_constraintRight_creator="1"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/imageView6" />
+        android:layout_marginBottom="16dp"
+        app:layout_constraintBottom_toTopOf="@+id/imageView6"
+        tools:layout_constraintTop_creator="1"
+        tools:layout_constraintBottom_creator="1" />
 
     <TextView
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="251번째 미션 진행중..."
+        android:layout_marginTop="8dp"
+        android:text="@string/MissionProgress"
         android:textColor="@android:color/background_light"
         android:textStyle="bold"
+        app:layout_constraintLeft_toLeftOf="@+id/imageView5"
+        app:layout_constraintRight_toRightOf="@+id/imageView5"
+        app:layout_constraintTop_toTopOf="@+id/imageView5"
         tools:layout_constraintLeft_creator="1"
         tools:layout_constraintRight_creator="1"
-        tools:layout_constraintTop_creator="1"
-        app:layout_constraintTop_toTopOf="@+id/imageView5"
-        android:layout_marginTop="8dp"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="@+id/imageView5"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="@+id/imageView5" />
+        tools:layout_constraintTop_creator="1" />
 
     <ImageView
         android:id="@+id/imageView6"
-        android:layout_width="350dp"
+        android:layout_width="0dp"
         android:layout_height="158dp"
         android:layout_marginBottom="31dp"
-        android:layout_marginEnd="12dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginStart="5dp"
+        android:layout_marginEnd="14dp"
+        android:layout_marginLeft="14dp"
+        android:layout_marginRight="14dp"
+        android:layout_marginStart="14dp"
         android:background="?attr/colorPrimary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -117,8 +117,7 @@
     <ImageView
         android:id="@+id/imageView7"
         android:layout_width="66dp"
-        android:layout_height="125dp"
-        android:layout_marginEnd="42dp"
+        android:layout_height="0dp"
         android:layout_marginLeft="43dp"
         android:layout_marginStart="43dp"
         android:background="@drawable/wrap_whiteborder"
@@ -126,30 +125,28 @@
         app:srcCompat="@mipmap/angel"
         tools:layout_constraintBottom_creator="1"
         tools:layout_constraintLeft_creator="1"
-        tools:layout_constraintRight_creator="1"
         tools:layout_constraintTop_creator="1"
         app:layout_constraintTop_toTopOf="@+id/imageView6"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="16dp"
         app:layout_constraintBottom_toBottomOf="@+id/imageView6"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="16dp"
         app:layout_constraintVertical_bias="0.529" />
 
     <TextView
         android:id="@+id/textView12"
         android:layout_width="35dp"
         android:layout_height="0dp"
-        android:layout_marginStart="8dp"
         android:text="@string/UserClass"
         android:textAlignment="center"
         android:textColor="#ffffff"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/imageView7"
-        android:layout_marginBottom="13dp"
-        android:layout_marginLeft="8dp"
+        android:layout_marginBottom="12dp"
         app:layout_constraintLeft_toLeftOf="@+id/imageView7"
-        android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="@+id/imageView7"
-        app:layout_constraintHorizontal_bias="0.333" />
+        app:layout_constraintHorizontal_bias="0.333"
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintLeft_creator="1" />
 
     <TextView
         android:id="@+id/textView13"
@@ -162,11 +159,16 @@
         tools:layout_constraintLeft_creator="1"
         tools:layout_constraintRight_creator="1"
         tools:layout_constraintTop_creator="1"
-        tools:layout_editor_absoluteY="424dp"
         app:layout_constraintLeft_toRightOf="@+id/imageView7"
         android:layout_marginLeft="32dp"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="@+id/imageView6" />
+        android:layout_marginRight="74dp"
+        app:layout_constraintRight_toRightOf="@+id/imageView6"
+        tools:layout_constraintBottom_creator="1"
+        android:layout_marginStart="32dp"
+        app:layout_constraintBottom_toBottomOf="@+id/textView12"
+        android:layout_marginTop="72dp"
+        app:layout_constraintTop_toBottomOf="@+id/button_change_nammukfood"
+        android:layout_marginBottom="72dp" />
 
     <ProgressBar
         android:id="@+id/progressBar2"
@@ -183,28 +185,11 @@
         app:layout_constraintTop_toBottomOf="@+id/textView13"
         android:layout_marginStart="8dp" />
 
-    <ProgressBar
-        android:id="@+id/progressBar"
-        style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Horizontal"
-        android:layout_width="150dp"
-        android:layout_height="33dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="11dp"
-        android:max="100"
-        android:progress="56"
-        android:progressTint="@android:color/holo_orange_light"
-        android:scaleY="7"
-        app:layout_constraintTop_toBottomOf="@+id/textView13"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="@+id/imageView6"
-        app:layout_constraintLeft_toRightOf="@+id/imageView7" />
-
     <TextView
         android:id="@+id/textView14"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="13dp"
+        android:layout_marginLeft="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="7dp"
         android:text="@string/AchieveCount"
@@ -258,27 +243,29 @@
         android:id="@+id/textView16"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="계급 정보"
+        android:layout_marginBottom="5dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="8dp"
+        android:text="@string/ClassInfo"
         android:textAlignment="center"
         android:textColor="@android:color/background_light"
         android:textSize="20sp"
-        android:layout_marginBottom="5dp"
         app:layout_constraintBottom_toTopOf="@+id/textView13"
-        android:layout_marginRight="10dp"
-        app:layout_constraintRight_toRightOf="@+id/imageView6"
-        app:layout_constraintLeft_toRightOf="@+id/imageView7"
-        android:layout_marginLeft="8dp"
         app:layout_constraintHorizontal_bias="0.205"
+        app:layout_constraintLeft_toRightOf="@+id/imageView7"
+        app:layout_constraintRight_toRightOf="@+id/imageView6"
         app:layout_constraintTop_toTopOf="@+id/imageView6"
-        android:layout_marginTop="8dp" />
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="10dp" />
 
     <ProgressBar
         android:id="@+id/progressBar5"
         style="?android:attr/progressBarStyleHorizontal"
-        android:layout_width="300dp"
+        android:layout_width="0dp"
         android:layout_height="33dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="10dp"
+        android:layout_marginLeft="25dp"
+        android:layout_marginRight="25dp"
         android:max="100"
         android:progress="50"
         android:progressTint="@android:color/holo_orange_light"
@@ -287,23 +274,27 @@
         app:layout_constraintRight_toRightOf="@+id/imageView5"
         app:layout_constraintTop_toBottomOf="@+id/textView4"
         android:layout_marginTop="12dp"
-        app:layout_constraintHorizontal_bias="0.531" />
+        app:layout_constraintHorizontal_bias="0.531"
+        tools:layout_constraintRight_creator="1"
+        android:layout_marginStart="25dp"
+        android:layout_marginEnd="25dp"
+        tools:layout_constraintLeft_creator="1" />
 
     <TextView
         android:id="@+id/textView24"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
         android:layout_marginTop="8dp"
-        android:text="510KCAL / 780KCAL"
+        android:text="@string/KcalProgress"
         android:textColor="@android:color/background_light"
         app:layout_constraintBottom_toBottomOf="@+id/progressBar5"
         app:layout_constraintLeft_toLeftOf="@+id/progressBar5"
         app:layout_constraintRight_toRightOf="@+id/progressBar5"
         app:layout_constraintTop_toTopOf="@+id/progressBar5"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.0"
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintLeft_creator="1" />
 
     <ImageView
         android:id="@+id/imageView4"
@@ -311,26 +302,12 @@
         android:layout_height="wrap_content"
         app:srcCompat="@mipmap/burger"
         app:layout_constraintTop_toTopOf="@+id/imageView9"
-        android:layout_marginTop="0dp"
         app:layout_constraintBottom_toBottomOf="@+id/imageView9"
         android:layout_marginBottom="8dp"
-        android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="@+id/imageView9"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="@+id/imageView9" />
-
-    <ImageView
-        android:id="@+id/imageView8"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:srcCompat="@mipmap/nammukpig"
-        android:layout_marginTop="11dp"
-        app:layout_constraintTop_toBottomOf="@+id/imageView9"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="@+id/imageView5"
-        app:layout_constraintRight_toLeftOf="@+id/button_change_nammukfood"
-        android:layout_marginRight="8dp"
-        app:layout_constraintHorizontal_bias="0.472" />
+        app:layout_constraintLeft_toLeftOf="@+id/imageView9"
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintLeft_creator="1" />
 
     <ImageView
         android:id="@+id/imageView9"
@@ -339,50 +316,63 @@
         app:srcCompat="@mipmap/balloon"
         android:layout_marginLeft="20dp"
         app:layout_constraintLeft_toLeftOf="@+id/imageView5"
-        android:layout_marginTop="55dp"
-        app:layout_constraintTop_toBottomOf="@+id/textView24" />
+        android:layout_marginTop="54dp"
+        app:layout_constraintTop_toBottomOf="@+id/textView24"
+        android:layout_marginStart="20dp" />
 
     <TextView
         android:id="@+id/textView31"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="BURGERKING"
+        android:layout_marginLeft="37dp"
+        android:layout_marginRight="39dp"
+        android:layout_marginTop="53dp"
+        android:text="@string/Brand"
         android:textColor="@android:color/background_light"
         android:textSize="20sp"
-        android:layout_marginRight="7dp"
-        app:layout_constraintRight_toRightOf="@+id/imageView5"
+        app:layout_constraintHorizontal_bias="0.475"
         app:layout_constraintLeft_toRightOf="@+id/imageView9"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="54dp"
+        app:layout_constraintRight_toRightOf="@+id/imageView5"
         app:layout_constraintTop_toBottomOf="@+id/textView24"
-        app:layout_constraintHorizontal_bias="0.475" />
+        tools:layout_constraintRight_creator="1"
+        android:layout_marginStart="37dp"
+        android:layout_marginEnd="39dp"
+        tools:layout_constraintLeft_creator="1" />
 
     <TextView
         android:id="@+id/textView32"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="치즈와퍼"
+        android:layout_marginLeft="34dp"
+        android:layout_marginRight="34dp"
+        android:layout_marginTop="8dp"
+        android:text="@string/FName"
         android:textColor="@android:color/background_light"
         android:textSize="18sp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/textView31"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="@+id/imageView5"
         app:layout_constraintLeft_toRightOf="@+id/imageView9"
-        android:layout_marginLeft="8dp" />
+        app:layout_constraintRight_toRightOf="@+id/imageView5"
+        app:layout_constraintTop_toBottomOf="@+id/textView31"
+        tools:layout_constraintRight_creator="1"
+        android:layout_marginStart="34dp"
+        android:layout_marginEnd="34dp"
+        tools:layout_constraintLeft_creator="1" />
 
     <TextView
         android:id="@+id/textView33"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="780 KCAL / 1개"
-        android:textColor="@android:color/background_light"
+        android:layout_marginLeft="52dp"
+        android:layout_marginRight="49dp"
         android:layout_marginTop="28dp"
-        app:layout_constraintTop_toBottomOf="@+id/textView32"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="@+id/imageView5"
+        android:text="@string/KcalPerOne"
+        android:textColor="@android:color/background_light"
         app:layout_constraintLeft_toRightOf="@+id/imageView9"
-        android:layout_marginLeft="8dp" />
+        app:layout_constraintRight_toRightOf="@+id/imageView5"
+        app:layout_constraintTop_toBottomOf="@+id/textView32"
+        tools:layout_constraintRight_creator="1"
+        android:layout_marginStart="52dp"
+        android:layout_marginEnd="49dp"
+        tools:layout_constraintLeft_creator="1" />
 
     <Button
         android:id="@+id/button_change_nammukfood"
@@ -390,16 +380,37 @@
         android:layout_width="90dp"
         android:layout_height="30dp"
         android:layout_marginBottom="8dp"
+        android:layout_marginEnd="53dp"
+        android:layout_marginLeft="54dp"
+        android:layout_marginRight="53dp"
+        android:layout_marginStart="54dp"
         android:layout_marginTop="8dp"
         android:background="@drawable/wrap_whiteborder"
-        android:text="수정"
+        android:text="@string/Change"
         android:textColor="@android:color/background_light"
         app:layout_constraintBottom_toBottomOf="@+id/imageView5"
+        app:layout_constraintLeft_toRightOf="@+id/imageView9"
+        app:layout_constraintRight_toRightOf="@+id/imageView5"
         app:layout_constraintTop_toBottomOf="@+id/textView33"
         app:layout_constraintVertical_bias="0.416"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="@+id/imageView5"
-        app:layout_constraintLeft_toRightOf="@+id/imageView9"
-        android:layout_marginLeft="8dp" />
+        tools:layout_constraintLeft_creator="1"
+        tools:layout_constraintRight_creator="1" />
+
+    <ImageView
+        android:id="@+id/imageView8"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:srcCompat="@mipmap/nammukpig"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView5"
+        android:layout_marginLeft="32dp"
+        app:layout_constraintLeft_toLeftOf="@+id/imageView5"
+        app:layout_constraintRight_toLeftOf="@+id/button_change_nammukfood"
+        android:layout_marginRight="66dp"
+        tools:layout_constraintRight_creator="1"
+        android:layout_marginStart="67dp"
+        android:layout_marginEnd="66dp"
+        tools:layout_constraintLeft_creator="1"
+        app:layout_constraintHorizontal_bias="0.0"
+        android:layout_marginBottom="-1dp" />
 
 </android.support.constraint.ConstraintLayout>
