--- a/app/src/main/res/layout/activity_userregister1.xml
+++ b/app/src/main/res/layout/activity_userregister1.xml
@@ -101,6 +101,7 @@
         android:background="@drawable/wrap_blackborder"
         android:text="@string/Next"
         android:textColor="@android:color/black"
+        android:textSize="18sp"
         android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginRight="8dp"
