MY 운동 메뉴 추가

--- a/app/src/main/res/layout/activity_userregister2.xml
+++ b/app/src/main/res/layout/activity_userregister2.xml
@@ -59,6 +59,7 @@
         android:ems="10"
         android:hint="@string/Age"
         android:inputType="number"
+        android:paddingLeft="10dp"
         app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -70,11 +71,12 @@
         android:layout_height="40dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="38dp"
         android:background="@drawable/wrap_blackborder"
         android:ems="10"
         android:hint="@string/Height"
         android:inputType="number"
+        android:paddingLeft="10dp"
         app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -86,11 +88,12 @@
         android:layout_height="40dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="34dp"
         android:background="@drawable/wrap_blackborder"
         android:ems="10"
         android:hint="@string/Weight"
         android:inputType="number"
+        android:paddingLeft="10dp"
         app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
