--- a/app/src/main/res/layout/activity_userregister1.xml
+++ b/app/src/main/res/layout/activity_userregister1.xml
@@ -10,59 +10,63 @@
         android:id="@+id/REmail"
         android:layout_width="215dp"
         android:layout_height="40dp"
+        android:layout_marginLeft="28dp"
+        android:layout_marginTop="40dp"
         android:background="@drawable/wrap_blackborder"
         android:ems="10"
         android:hint="@string/IDEmail"
         android:inputType="textEmailAddress"
-        android:layout_marginLeft="28dp"
+        android:paddingLeft="10dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginTop="40dp"
         app:layout_constraintTop_toBottomOf="@+id/textView51" />
 
     <EditText
         android:id="@+id/RPassword"
         android:layout_width="215dp"
         android:layout_height="40dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="39dp"
         android:background="@drawable/wrap_blackborder"
         android:ems="10"
         android:hint="@string/PasswordSix"
         android:inputType="textPassword"
-        android:layout_marginTop="39dp"
-        app:layout_constraintTop_toBottomOf="@+id/REmail"
-        android:layout_marginLeft="8dp"
+        android:paddingLeft="10dp"
+        app:layout_constraintHorizontal_bias="0.13"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintHorizontal_bias="0.13" />
+        app:layout_constraintTop_toBottomOf="@+id/REmail" />
 
     <EditText
         android:id="@+id/RConfirmPassword"
         android:layout_width="215dp"
         android:layout_height="40dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="41dp"
         android:background="@drawable/wrap_blackborder"
         android:ems="10"
         android:hint="@string/PasswordConfirm"
         android:inputType="textPassword"
-        android:layout_marginTop="41dp"
-        app:layout_constraintTop_toBottomOf="@+id/RPassword"
-        android:layout_marginLeft="8dp"
+        android:paddingLeft="10dp"
+        app:layout_constraintHorizontal_bias="0.13"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintHorizontal_bias="0.13" />
+        app:layout_constraintTop_toBottomOf="@+id/RPassword" />
 
     <EditText
         android:id="@+id/RNickName"
         android:layout_width="215dp"
         android:layout_height="40dp"
+        android:layout_marginLeft="28dp"
+        android:layout_marginTop="45dp"
         android:background="@drawable/wrap_blackborder"
         android:ems="10"
         android:hint="@string/Nickname"
         android:inputType="textPersonName"
-        android:layout_marginTop="45dp"
-        app:layout_constraintTop_toBottomOf="@+id/RConfirmPassword"
-        android:layout_marginLeft="28dp"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        android:paddingLeft="10dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/RConfirmPassword" />
 
     <Button
         android:id="@+id/IDConfirm"
