--- a/app/src/main/res/layout/activity_myexercise_add.xml
+++ b/app/src/main/res/layout/activity_myexercise_add.xml
@@ -8,17 +8,17 @@
     <Button
         android:id="@+id/button_myexerciseadd_search"
         android:layout_width="30dp"
-        android:layout_height="40dp"
+        android:layout_height="30dp"
         android:layout_marginEnd="0dp"
+        android:layout_marginRight="7dp"
         android:background="@android:drawable/ic_menu_search"
         app:layout_constraintBaseline_toBaselineOf="@+id/editText5"
-        app:layout_constraintRight_toLeftOf="@+id/button_myexerciseadd_makemy"
-        android:layout_marginRight="7dp" />
+        app:layout_constraintRight_toLeftOf="@+id/button_myexerciseadd_makemy" />
 
     <Button
         android:id="@+id/button_myexerciseadd_makemy"
         android:layout_width="30dp"
-        android:layout_height="40dp"
+        android:layout_height="30dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:background="@android:drawable/ic_menu_edit"
