음식사전과 달력

--- a/app/src/main/res/layout/activity_fab_exercise_calendar.xml
+++ b/app/src/main/res/layout/activity_fab_exercise_calendar.xml
@@ -59,7 +59,7 @@
         android:orientation="horizontal" />
 
     <CalendarView
-        android:id="@+id/calendarView"
+        android:id="@+id/calendarView_exercise"
         android:layout_width="375dp"
         android:layout_height="500dp"
         android:layout_marginBottom="0dp"
