--- a/app/src/main/res/layout/activity_fab_food.xml
+++ b/app/src/main/res/layout/activity_fab_food.xml
@@ -242,7 +242,7 @@
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/imageView24"
         app:layout_constraintTop_toTopOf="@+id/imageView24"
-        app:layout_constraintRight_toLeftOf="@+id/button7"
+        app:layout_constraintRight_toLeftOf="@+id/button_fabfood_lunchreg"
         android:layout_marginRight="8dp"
         android:layout_marginEnd="8dp"/>
 
@@ -262,7 +262,7 @@
         android:textColor="#ff6161"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/imageView26"
-        app:layout_constraintRight_toLeftOf="@+id/button8"
+        app:layout_constraintRight_toLeftOf="@+id/button_fabfood_dinnerreg"
         app:layout_constraintTop_toTopOf="@+id/imageView26" />
 
     <EditText
@@ -281,7 +281,7 @@
         android:textColor="#ff6161"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/imageView27"
-        app:layout_constraintRight_toLeftOf="@+id/button9"
+        app:layout_constraintRight_toLeftOf="@+id/button_fabfood_supperreg"
         app:layout_constraintTop_toTopOf="@+id/imageView27" />
 
     <Button
@@ -299,7 +299,7 @@
         app:layout_constraintTop_toTopOf="@+id/imageView25" />
 
     <Button
-        android:id="@+id/button9"
+        android:id="@+id/button_fabfood_supperreg"
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="40dp"
         android:layout_height="40dp"
@@ -313,7 +313,7 @@
         app:layout_constraintTop_toTopOf="@+id/imageView27" />
 
     <Button
-        android:id="@+id/button8"
+        android:id="@+id/button_fabfood_dinnerreg"
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="40dp"
         android:layout_height="40dp"
@@ -327,7 +327,7 @@
         app:layout_constraintTop_toTopOf="@+id/imageView26" />
 
     <Button
-        android:id="@+id/button7"
+        android:id="@+id/button_fabfood_lunchreg"
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="40dp"
         android:layout_height="40dp"
