--- a/app/src/main/res/layout/activity_nammukfood.xml
+++ b/app/src/main/res/layout/activity_nammukfood.xml
@@ -83,7 +83,7 @@
         tools:layout_constraintBottom_creator="1" />
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/myinfo_sex"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
@@ -133,7 +133,7 @@
         app:layout_constraintVertical_bias="0.529" />
 
     <TextView
-        android:id="@+id/textView12"
+        android:id="@+id/user_class"
         android:layout_width="35dp"
         android:layout_height="0dp"
         android:text="@string/UserClass"
@@ -165,7 +165,7 @@
         app:layout_constraintRight_toRightOf="@+id/imageView6"
         tools:layout_constraintBottom_creator="1"
         android:layout_marginStart="32dp"
-        app:layout_constraintBottom_toBottomOf="@+id/textView12"
+        app:layout_constraintBottom_toBottomOf="@+id/user_class"
         android:layout_marginTop="72dp"
         app:layout_constraintTop_toBottomOf="@+id/button_change_nammukfood"
         android:layout_marginBottom="72dp" />
@@ -186,7 +186,7 @@
         android:layout_marginStart="8dp" />
 
     <TextView
-        android:id="@+id/textView14"
+        android:id="@+id/user_achievecount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
@@ -200,7 +200,7 @@
         tools:layout_constraintTop_creator="1" />
 
     <TextView
-        android:id="@+id/textView15"
+        android:id="@+id/user_achievecounttotal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="9dp"
@@ -208,11 +208,11 @@
         android:text="@string/UserAchieveCountTotal"
         android:textColor="#ffffff"
         android:textStyle="bold"
-        app:layout_constraintBaseline_toBaselineOf="@+id/textView14"
-        app:layout_constraintLeft_toRightOf="@+id/textView14" />
+        app:layout_constraintBaseline_toBaselineOf="@+id/user_achievecount"
+        app:layout_constraintLeft_toRightOf="@+id/user_achievecount" />
 
     <TextView
-        android:id="@+id/textView22"
+        android:id="@+id/user_achieverpercent"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="5dp"
@@ -221,21 +221,21 @@
         android:text="@string/UserAchievePercent"
         android:textColor="#ffffff"
         android:textStyle="bold"
-        app:layout_constraintRight_toLeftOf="@+id/textView15"
+        app:layout_constraintRight_toLeftOf="@+id/user_achievecounttotal"
         app:layout_constraintTop_toTopOf="@+id/progressBar2"
         tools:layout_constraintRight_creator="1"
         tools:layout_constraintTop_creator="1" />
 
     <TextView
-        android:id="@+id/textView23"
+        android:id="@+id/user_achievecountcurrent"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/UserAchieveCountCurrent"
         android:textColor="#ffffff"
         android:textStyle="bold"
-        app:layout_constraintBaseline_toBaselineOf="@+id/textView22"
-        app:layout_constraintLeft_toRightOf="@+id/textView15"
-        app:layout_constraintRight_toRightOf="@+id/textView15"
+        app:layout_constraintBaseline_toBaselineOf="@+id/user_achieverpercent"
+        app:layout_constraintLeft_toRightOf="@+id/user_achievecounttotal"
+        app:layout_constraintRight_toRightOf="@+id/user_achievecounttotal"
         tools:layout_constraintLeft_creator="1"
         tools:layout_constraintRight_creator="1" />
 
@@ -272,7 +272,7 @@
         android:scaleY="7"
         app:layout_constraintLeft_toLeftOf="@+id/imageView5"
         app:layout_constraintRight_toRightOf="@+id/imageView5"
-        app:layout_constraintTop_toBottomOf="@+id/textView4"
+        app:layout_constraintTop_toBottomOf="@+id/myinfo_sex"
         android:layout_marginTop="12dp"
         app:layout_constraintHorizontal_bias="0.531"
         tools:layout_constraintRight_creator="1"
